crates/ridge-parser/tests/fixtures/errors/p021_inline_record_in_return_type.ridge
-- expect: P021
-- Trigger: inline record type body in a TyCon-argument position.
pub fn foo (x: Int) -> Result { name: Text, age: Int } Text =
    Ok { name = "ada", age = x }
